Fixed alembic configs. Added user google auth configs.

--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
+# === PostgreSQL ===
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=sidis
+
+# === GOOGLE CREDENTIALS ===
+GOOGLE_CLIENT_ID=514025740567-juhbj0rjdn0fqrv19fjtl06076k1e971.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+# === System config ===
+SECRET_KEY=q4t7w!z%C*F-JaNdRgUkXp2r5u8x/A?D
+TOKEN_LIFETIME=120
+ALGORITHM=HS256
